--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 div {
-  width: 40%;
-  height: 400px;
+  width: 300px;
+  height: 300px;
   border: 1px solid black;
   margin: 0 auto;
+  display: inline-block;
 }
