--- a/style.css
+++ b/style.css
@@ -4,4 +4,23 @@ div {
   border: 1px solid black;
   margin: 0 auto;
   display: inline-block;
+  background-color: rgba(255, 255, 255, .3)
+}
+
+body{
+      /* The image used */
+    background-image: url("https://s3.amazonaws.com/lowres.jantoo.com/science-space_exploration-nasa-earth-hi_mom-astronauts-12247463_low.jpg");
+
+    /* Set a specific height */
+    height: 500px; 
+
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#button{
+
 }
