--- a/style.css
+++ b/style.css
@@ -1,7 +1,42 @@
-div {
+#lonlyDiv {
   width: 300px;
   height: 300px;
   border: 1px solid black;
   margin: 0 auto;
   display: inline-block;
+}
+#dv{
+  width: 300px;
+  height: 300px;
+  border: 1px solid black;
+  margin: 0 auto;
+  display: inline-block;
+}
+#nav{
+  width: 90%;
+  margin: 0 auto;
+  padding-top:10px;
+  border-bottom: 1px solid gray;
+}
+li{
+  display: inline-block;
+}
+.page-link{
+  float: right;
+  margin-right: 20px;
+}
+.page-link a{
+  text-decoration: none;
+  color:black;
+}
+.page-link a:hover {
+  color: blue;
+}
+#body{
+  background-image: url("https://www.lacrosseschools.org/longfellow-middle/wp-content/uploads/sites/6/2013/09/football.jpg");
+  height: 200px;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
